colcon_ws/log/build_2023-06-15_19-14-05/px4_ros_com/stderr.log
/root/colcon_ws/src/px4_ros_com/src/examples/offboard/offboard_control.cpp:199:2: error: expected unqualified-id before ‘/’ token
  199 |  /
      |  ^
make[2]: *** [CMakeFiles/offboard_control.dir/build.make:63: CMakeFiles/offboard_control.dir/src/examples/offboard/offboard_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:113: CMakeFiles/offboard_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
